--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,11 +24,7 @@ if(CUDA_FOUND)
   -ccbin /usr/bin/clang; 
   -gencode;arch=compute_30,code=sm_30;  
   -gencode;arch=compute_35,code=sm_35;
-  -gencode;arch=compute_35,code=compute_35;
-  -gencode;arch=compute_20,code=sm_20; 
-  -gencode;arch=compute_11,code=sm_11; 
-  -gencode;arch=compute_12,code=sm_12;
-  -gencode;arch=compute_13,code=sm_13;")
+  -gencode;arch=compute_35,code=compute_35;")
 
   # add -Wextra compiler flag for gcc compilations
   if (UNIX)
@@ -39,12 +35,12 @@ if(CUDA_FOUND)
   # add debugging to CUDA NVCC flags.  For NVidia's NSight tools.
   set(CUDA_NVCC_FLAGS_DEBUG ${CUDA_NVCC_FLAGS_DEBUG} "-G")
 
-  add_subdirectory (HW1)
-  add_subdirectory (HW2)
-  add_subdirectory (HW3)
-  add_subdirectory (HW4)
-  add_subdirectory (HW5)
-  add_subdirectory (HW6)
+  add_subdirectory ("Problem Sets/Problem Set 1")
+  add_subdirectory ("Problem Sets/Problem Set 2")
+  add_subdirectory ("Problem Sets/Problem Set 3")
+  add_subdirectory ("Problem Sets/Problem Set 4")
+  add_subdirectory ("Problem Sets/Problem Set 5")
+  add_subdirectory ("Problem Sets/Problem Set 6")
 else(CUDA_FOUND)
   message("CUDA is not installed on this system.")
 endif()
